gac_sb/objects/Historique_Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>ACS_Annees_concernees_concurrent__c</fullName>
        <inlineHelpText>Indiquez les années concernées par le contrat du concurrent en place si vous avez l&apos;information</inlineHelpText>
        <label>ACS Années concernées concurrent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACS_Autre_Concurrent__c</fullName>
        <label>ACS Autre concurrent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACS_Concurrent__c</fullName>
        <inlineHelpText>Indiquez le concurrent en place chez le prospect, utilisez le choix &quot;Autres&quot; si le concurrent n&apos;apparait pas dans la liste, utilisez le choix &quot;Inconnu&quot; si vous n&apos;avez pas l&apos;information</inlineHelpText>
        <label>Gestion du dossier ACS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concurrent non communiqué</fullName>
                </value>
                <value>
                    <fullName>Interne</fullName>
                </value>
                <value>
                    <fullName>GAC</fullName>
                </value>
                <value>
                    <fullName>Absiskey</fullName>
                </value>
                <value>
                    <fullName>Acies</fullName>
                </value>
                <value>
                    <fullName>Adocis</fullName>
                </value>
                <value>
                    <fullName>Ayming (ex Alma et Lowendal)</fullName>
                </value>
                <value>
                    <fullName>Altax</fullName>
                </value>
                <value>
                    <fullName>Atequacy</fullName>
                </value>
                <value>
                    <fullName>Cabinet régional</fullName>
                </value>
                <value>
                    <fullName>Cefi action</fullName>
                </value>
                <value>
                    <fullName>CMS - Francis Lefebvre</fullName>
                </value>
                <value>
                    <fullName>Crofthawk</fullName>
                </value>
                <value>
                    <fullName>DL Developpement</fullName>
                </value>
                <value>
                    <fullName>Efficient Innovation</fullName>
                </value>
                <value>
                    <fullName>Effigroup Bloomon (ex Effinov)</fullName>
                </value>
                <value>
                    <fullName>Ernst &amp; Young</fullName>
                </value>
                <value>
                    <fullName>Eurinnov</fullName>
                </value>
                <value>
                    <fullName>Expert comptable</fullName>
                </value>
                <value>
                    <fullName>F.Iniciativas</fullName>
                </value>
                <value>
                    <fullName>Fidal</fullName>
                </value>
                <value>
                    <fullName>Fineco</fullName>
                </value>
                <value>
                    <fullName>Grant Thornton</fullName>
                </value>
                <value>
                    <fullName>Hexalliance</fullName>
                </value>
                <value>
                    <fullName>Ilceos</fullName>
                </value>
                <value>
                    <fullName>Inventage (ex GSM Subventium)</fullName>
                </value>
                <value>
                    <fullName>KPMG</fullName>
                </value>
                <value>
                    <fullName>Kurt Salmon</fullName>
                </value>
                <value>
                    <fullName>Leyton</fullName>
                </value>
                <value>
                    <fullName>Lowendal Masai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACS_Date_dernier_controle_URSSAF__c</fullName>
        <label>Date dernier contrôle URSSAF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACS_Decisionnaire__c</fullName>
        <label>Décisionnaire ACS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACS_Dernier_ACS__c</fullName>
        <label>Date dernier ACS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>Jamais audité</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACS_Effectif_concerne__c</fullName>
        <label>Effectif concerné</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACS_Enjeux_opportunite__c</fullName>
        <inlineHelpText>Champ obligatoire pour effectuer la demande d&apos;approbation.</inlineHelpText>
        <label>ACS Enjeux Compte</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ECO</fullName>
                </value>
                <value>
                    <fullName>PREMIUM</fullName>
                </value>
                <value>
                    <fullName>STAR</fullName>
                </value>
                <value>
                    <fullName>Grand compte</fullName>
                </value>
                <value>
                    <fullName>Non communiqué</fullName>
                </value>
                <value>
                    <fullName>Enjeux insuffisants</fullName>
                </value>
                <value>
                    <fullName>Inéligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACS_MS_concernee__c</fullName>
        <inlineHelpText>Renseignez la valeur en k€</inlineHelpText>
        <label>MS de l&apos;année (k€)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACS_Nb_itinerants__c</fullName>
        <label>Nb itinérants</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACS_Service_paie_central__c</fullName>
        <label>Service paie centralisé</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
                <value>
                    <fullName>NSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACS_Service_paie_ext__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service paie externalisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACS_absenteisme__c</fullName>
        <label>% absentéisme</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACS_bas_salaires__c</fullName>
        <label>% bas salaires</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACS_convention_collective__c</fullName>
        <label>Convention collective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_fonds_propres__c</fullName>
        <label>AS Fonds propres</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aides_l_international__c</fullName>
        <inlineHelpText>Utilise ou a utilisé des aides à l&apos;international</inlineHelpText>
        <label>Aides à l&apos;international_OLD_V2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP Coface</fullName>
                </value>
                <value>
                    <fullName>Oséo International</fullName>
                </value>
                <value>
                    <fullName>Ubifrance</fullName>
                </value>
                <value>
                    <fullName>VIE</fullName>
                </value>
                <value>
                    <fullName>Aide régionale</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Aucune</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annee__c</fullName>
        <label>Année</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFI_Annees_concernees_concurrent__c</fullName>
        <label>CFI Années concernées concurrent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fermer</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFI_Autre_Concurrent__c</fullName>
        <label>CFI Autre Concurrent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFI_Concurrent__c</fullName>
        <label>CFI Gestion du dossier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non concerné</fullName>
                </value>
                <value>
                    <fullName>Concurrent non communiqué</fullName>
                </value>
                <value>
                    <fullName>Interne</fullName>
                </value>
                <value>
                    <fullName>GAC</fullName>
                </value>
                <value>
                    <fullName>Adocis</fullName>
                </value>
                <value>
                    <fullName>Ayming (ex Alma et Lowendal)</fullName>
                </value>
                <value>
                    <fullName>Altax</fullName>
                </value>
                <value>
                    <fullName>Cefi action</fullName>
                </value>
                <value>
                    <fullName>CMS - Francis Lefebvre</fullName>
                </value>
                <value>
                    <fullName>DL Developpement</fullName>
                </value>
                <value>
                    <fullName>EIF</fullName>
                </value>
                <value>
                    <fullName>Ernst &amp; Young</fullName>
                </value>
                <value>
                    <fullName>Fidal</fullName>
                </value>
                <value>
                    <fullName>Grant Thornton</fullName>
                </value>
                <value>
                    <fullName>InovexConseils</fullName>
                </value>
                <value>
                    <fullName>Inventage (ex GSM Subventium)</fullName>
                </value>
                <value>
                    <fullName>Leyton</fullName>
                </value>
                <value>
                    <fullName>Lowendal Masai</fullName>
                </value>
                <value>
                    <fullName>Marianne experts</fullName>
                </value>
                <value>
                    <fullName>TAJ</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFI_Decisionnaire__c</fullName>
        <label>Décisionnaire CFI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFI_Enjeux_Opportunite__c</fullName>
        <label>CFI Enjeux Compte</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ECO</fullName>
                </value>
                <value>
                    <fullName>PREMIUM</fullName>
                </value>
                <value>
                    <fullName>STAR</fullName>
                </value>
                <value>
                    <fullName>Grand compte</fullName>
                </value>
                <value>
                    <fullName>Non communiqué</fullName>
                </value>
                <value>
                    <fullName>Enjeux insuffisants</fullName>
                </value>
                <value>
                    <fullName>Inéligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFI_Motif__c</fullName>
        <label>CFI Motif</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pas de suite donnée au PC</fullName>
                </value>
                <value>
                    <fullName>Bâtiment inachevé</fullName>
                </value>
                <value>
                    <fullName>PC modificatif</fullName>
                </value>
                <value>
                    <fullName>Démolition sur décision du juge</fullName>
                </value>
                <value>
                    <fullName>Erreur de calcul de la taxe</fullName>
                </value>
                <value>
                    <fullName>Exonération</fullName>
                </value>
                <value>
                    <fullName>Abattement</fullName>
                </value>
                <value>
                    <fullName>Aucun évènement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIN_Annees_concernees_concurrent__c</fullName>
        <label>Années concernées concurrent CIN</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fermer</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIN_Autre_concurrent__c</fullName>
        <label>CIN Autre concurrent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIN_Concurrent__c</fullName>
        <label>Gestion du dossier CIN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non concerné</fullName>
                </value>
                <value>
                    <fullName>Concurrent non communiqué</fullName>
                </value>
                <value>
                    <fullName>Interne</fullName>
                </value>
                <value>
                    <fullName>GAC</fullName>
                </value>
                <value>
                    <fullName>Absiskey</fullName>
                </value>
                <value>
                    <fullName>Acies</fullName>
                </value>
                <value>
                    <fullName>Actemis</fullName>
                </value>
                <value>
                    <fullName>Adocis</fullName>
                </value>
                <value>
                    <fullName>Alma Consulting Group</fullName>
                </value>
                <value>
                    <fullName>Capital High Tech</fullName>
                </value>
                <value>
                    <fullName>Crofthawk</fullName>
                </value>
                <value>
                    <fullName>Efficient Innovation</fullName>
                </value>
                <value>
                    <fullName>Effigroup Bloomon (ex Effinov)</fullName>
                </value>
                <value>
                    <fullName>Eurinnov</fullName>
                </value>
                <value>
                    <fullName>Expert comptable</fullName>
                </value>
                <value>
                    <fullName>F.Iniciativas</fullName>
                </value>
                <value>
                    <fullName>Fidal</fullName>
                </value>
                <value>
                    <fullName>Fineco</fullName>
                </value>
                <value>
                    <fullName>Hexalliance</fullName>
                </value>
                <value>
                    <fullName>IFEM</fullName>
                </value>
                <value>
                    <fullName>Ilceos</fullName>
                </value>
                <value>
                    <fullName>Inventage (ex GSM Subventium)</fullName>
                </value>
                <value>
                    <fullName>Kurt Salmon</fullName>
                </value>
                <value>
                    <fullName>Leyton</fullName>
                </value>
                <value>
                    <fullName>Lowendal Masai</fullName>
                </value>
                <value>
                    <fullName>OL &amp; DI</fullName>
                </value>
                <value>
                    <fullName>Sogedev</fullName>
                </value>
                <value>
                    <fullName>TAJ</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIN_Decisionnaire__c</fullName>
        <label>Décisionnaire CIN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIN_enjeux_opportunite__c</fullName>
        <label>CIN Enjeux Compte</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ECO</fullName>
                </value>
                <value>
                    <fullName>PREMIUM</fullName>
                </value>
                <value>
                    <fullName>STAR</fullName>
                </value>
                <value>
                    <fullName>Grand compte</fullName>
                </value>
                <value>
                    <fullName>Non communiqué</fullName>
                </value>
                <value>
                    <fullName>Enjeux insuffisants</fullName>
                </value>
                <value>
                    <fullName>Inéligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIR_2010_k__c</fullName>
        <label>CIR 2010 (k€)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIR_2011_k__c</fullName>
        <inlineHelpText>Renseignez la valeur en k€</inlineHelpText>
        <label>CIR 2011 (k€)_OLD_V2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIR_2012_k__c</fullName>
        <inlineHelpText>Renseignez la valeur en k€</inlineHelpText>
        <label>CIR 2012 (k€)_OLD_V2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIR_Annee_dernier_CIR__c</fullName>
        <label>Année Dernier CIR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>&lt; 2009</fullName>
                </value>
                <value>
                    <fullName>Inconnu</fullName>
                </value>
                <value>
                    <fullName>Non communiqué</fullName>
                </value>
                <value>
                    <fullName>Non Concerné</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIR_Annees_concernees_concurrent__c</fullName>
        <inlineHelpText>Indiquez les années concernées par le contrat du concurrent en place si vous avez l&apos;information</inlineHelpText>
        <label>CIR Années concernées concurrent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIR_Autre_Concurrent__c</fullName>
        <label>CIR Autre concurrent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIR_Budget_R_D__c</fullName>
        <inlineHelpText>Renseignez la valeur en k€</inlineHelpText>
        <label>Budget R&amp;D (k€)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIR_Concurrent__c</fullName>
        <inlineHelpText>Indiquez le concurrent en place chez le prospect, utilisez le choix &quot;Autres&quot; si le concurrent n&apos;apparait pas dans la liste, utilisez le choix &quot;Inconnu&quot; si vous n&apos;avez pas l&apos;information</inlineHelpText>
        <label>CIR Gestion du dossier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non concerné</fullName>
                </value>
                <value>
                    <fullName>Concurrent non communiqué</fullName>
                </value>
                <value>
                    <fullName>Interne</fullName>
                </value>
                <value>
                    <fullName>GAC</fullName>
                </value>
                <value>
                    <fullName>Absiskey</fullName>
                </value>
                <value>
                    <fullName>Acies</fullName>
                </value>
                <value>
                    <fullName>Actemis</fullName>
                </value>
                <value>
                    <fullName>Adocis</fullName>
                </value>
                <value>
                    <fullName>Alma Consulting Group</fullName>
                </value>
                <value>
                    <fullName>Capital High Tech</fullName>
                </value>
                <value>
                    <fullName>Crofthawk</fullName>
                </value>
                <value>
                    <fullName>Efficient Innovation</fullName>
                </value>
                <value>
                    <fullName>Effigroup Bloomon (ex Effinov)</fullName>
                </value>
                <value>
                    <fullName>Eurinnov</fullName>
                </value>
                <value>
                    <fullName>Expert comptable</fullName>
                </value>
                <value>
                    <fullName>F.Iniciativas</fullName>
                </value>
                <value>
                    <fullName>Fidal</fullName>
                </value>
                <value>
                    <fullName>Fineco</fullName>
                </value>
                <value>
                    <fullName>Hexalliance</fullName>
                </value>
                <value>
                    <fullName>IFEM</fullName>
                </value>
                <value>
                    <fullName>Ilceos</fullName>
                </value>
                <value>
                    <fullName>Inventage (ex GSM Subventium)</fullName>
                </value>
                <value>
                    <fullName>Kurt Salmon</fullName>
                </value>
                <value>
                    <fullName>Leyton</fullName>
                </value>
                <value>
                    <fullName>Lowendal Masai</fullName>
                </value>
                <value>
                    <fullName>OL &amp; DI</fullName>
                </value>
                <value>
                    <fullName>Sogedev</fullName>
                </value>
                <value>
                    <fullName>TAJ</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIR_Dans_le_dispositif__c</fullName>
        <label>Dans le dispositif CIR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non</fullName>
                </value>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>NSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIR_Decisionnaire__c</fullName>
        <label>Décisionnaire CIR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIR_Depenses_eligibles__c</fullName>
        <inlineHelpText>Renseignez la valeur en k€</inlineHelpText>
        <label>Dépenses éligibles (k€)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>